--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       src="https://kit.fontawesome.com/e391ce7786.js"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js" defer></script>
   </head>
   <body>
     <h1>Rock Paper Scissors</h1>
@@ -30,6 +29,6 @@
     <h2>Choose One !</h2>
     <h3 id="result"></h3>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
